# django-starter

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  LICENSE  README.md  deploy.py  fork.py  init.py  pyproject.toml
.rsync/: exclude
django_starter/: .gitignore  README.md  manage.py
django_starter/core/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
django_starter/core/locale/de/LC_MESSAGES/: django.po
django_starter/core/locale/en/LC_MESSAGES/: django.po
django_starter/core/static/core/css/: default.css
django_starter/core/templates/: base.html  index.html
django_starter/core/templatetags/: __init__.py  default_filters.py  humanize_extras.py
django_starter/django_starter/: .gitignore  asgi.py  data_view_utils.py  enums.py  managers.py  mixins.py  settings.py  settings_local.example.py  test.py  urls.py  utils.py  wsgi.py
django_starter/django_starter/locale/de/LC_MESSAGES/: django.po
django_starter/django_starter/locale/en/LC_MESSAGES/: django.po
git-hooks/: pre-commit.sh
